load("@rules_cc//cc:defs.bzl", "cc_library")

COPTS = [
    "-x", "c",
    "-std=c89",
    "-Wall",
    "-Wextra",
    "-Wpointer-arith",
    "-Wcast-align",
    "-Wwrite-strings",
    "-Wswitch-default",
    "-Wunreachable-code",
    "-Winit-self",
    "-Wmissing-field-initializers",
    "-Wno-unknown-pragmas",
    "-Wstrict-prototypes",
    "-Wundef",
    "-Wold-style-definition",
]

cc_library(
    name  = "memory",
    linkstatic = True,
    hdrs  = ["unity_memory.h"],
    srcs  = ["unity_memory.c"],
    copts = COPTS + [
        "-Isrc"
    ],
    deps  = [
        "//src:unity",
    ],
    visibility = ["//visibility:public"]
)
